# basenode

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
cmake/: CMakeLists.txt  common_flag_libs.cmake
config/: basenode.json  basenode_guild.json  basenode_player.json  gatenode.json  router.json
docs/: router_module_design_v2.md
src/: CMakeLists.txt  main.cpp  plugin_system_proc.cpp  plugin_system_proc.h
src/boot/: main.cpp
src/core/config/: apollo_config_loader.cpp  apollo_config_loader.h  config_loader.h  config_manager.cpp  config_manager.h  config_value.cpp  config_value.h  file_config_loader.cpp  file_config_loader.h
src/core/module/: module_event.h  module_interface.cpp  module_interface.h  module_router.cpp  module_router.h  module_zk.h  module_zk_registry.h
src/core/net/: network.cpp  network.h
src/core/plugin_system/: plugin_system_proc.cpp  plugin_system_proc.h
src/core/protobuf/: build_proto.sh  errcode.proto  guild.proto
src/core/service_discovery/: invoker.h  service_discovery_core.h
src/core/service_discovery/in_memory/: in_memory_service_discovery.h  in_memory_service_registry.h
src/core/service_discovery/zookeeper/: zk_client.h  zk_client_impl.cpp  zk_client_impl.h  zk_paths.h  zk_service_discovery.cpp  zk_service_discovery.h  zk_service_discovery_module.cpp  zk_service_discovery_module.h  zk_service_registry.cpp  zk_service_registry.h
src/core/utils/: basenode_def_internal.h
src/framework/gatenode/: gatenode.cpp
src/framework/router/: router_module.cpp  router_module.h
src/game/: module_interface.h
src/game/guild/: guild_module.cpp  guild_module.h
src/game/player/: player_module.cpp  player_module.h
src/gatenode/: CMakeLists.txt  gatenode.cpp
src/utils/: basenode_def_internal.h
